kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: bookstore-backend 
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5000
  type: LoadBalancer
