kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: bookstore-frontend 
  ports:
    - protocol: TCP
      port: 80 #service port
      targetPort: 80 #pod port
  type: LoadBalancer
